--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -1,12 +1,24 @@
 :root{
     --white: rgb(245, 245, 245);
     --black: rgb(40, 40, 40);
-    --yellow: rgb(250, 225, 75);
+    --yellow: rgb(243, 218, 76);
 
+    /*   curente   */
+    --umanism: rgb(136, 86, 52);
+    --iluminism: white;
+    --romantism: rgb(228, 53, 40);
+    --realism: rgb(96, 140, 223);
     --simbolism: rgb(160, 160, 160);
-    --romantism: rgb(206, 56, 45);
-    --realism: rgb(76, 128, 223);
-    --modernism: var(--yellow);
+    --modernism: rgb(245, 186, 58);
+    --traditionalism: rgb(77, 153, 77);
+
+    /*   perioade   */
+    --umanista: var(--umanism);
+    --iluminista: var(--iluminism);
+    --pasoptista: rgb(204, 202, 77);
+    --marilor_clasici: rgb(221, 65, 37);
+    --interbelica: var(--simbolism);
+    --postbelica: rgb(158, 47, 158);
 }
 @font-face{
     font-family: 'Exo';
@@ -44,7 +56,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Exo;
-    color: var(--black);
+    color: inherit;
 }
 .flex-row{
     display: flex;
@@ -61,6 +73,9 @@
 .fullbox{
     width: 100%;
     height: 100%;
+}
+.w100{
+    width: 100%;
 }
 div.loading{
     display: none;
