--- a/public/styles/curente.css
+++ b/public/styles/curente.css
@@ -3,19 +3,6 @@ body{
     flex-direction: column;
     align-items: center;
 }
-nav{
-    width: 100%;
-    padding: 1rem;
-    background-color: var(--yellow);
-}
-nav a{
-    text-decoration: none;
-    font-size: 1.5rem;
-    margin-left: 2rem;
-}
-nav a:hover{
-    text-decoration: underline;
-}
 main{
     width: min(100%, 50rem);
     padding: 4rem 5%;
@@ -58,10 +45,11 @@ div.grid >*:nth-child(4n+3),div.grid >*:nth-child(4n+4){
 div.autori{
     justify-content: space-evenly;
     width: 100%;
+    flex-wrap: wrap;
 }
 a.autor{
     padding: 1rem;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
     font-size: 1.25rem;
     border-radius: 3px;
     text-decoration: none;
